# MathProjectPython

./: .gitignore  Dockerfile  Makefile  README.md  create_test_excel.py  docker-compose.yml  main.py  pyproject.toml  run_tests.sh  seed_data.py  test_questions_100.xlsx
Documentation/: Full_Guide.md  GuideForDeveloper.md  Oqiwshi.md  Plan.md  TZ.md
apps/: admin.py  bot_state_model.py  models.py  serializers.py  views.py
apps/bot/: handlers.py  keyboards.py  main.py  states.py  storage.py  utils.py
apps/migrations/: 0001_initial.py  0002_botstate.py
apps/templates/admin/: excel_form.html  question_changelist.html
apps/tests/: test_models.py  test_views.py
core/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
